*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -199,7 +199,7 @@ admin.msg.info.user.modify		= L'utilisateur a bien été modifié
 admin.msg.error.user.insert		= L'insertion a échoué
 admin.msg.error.user.modify		= La modification a échoué
 
-admin.menu.home					= Accueil de l'administration
+admin.menu.home					= Accueil
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
@@ -228,4 +228,4 @@ table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.kind		= Type
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
-
+table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
