*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -133,12 +133,12 @@ msg.info.activity.updated.liberation		= La tâche libre "{0}" a été modifiée. Ell
 msg.info.activity.dependances.saved 		= Les dépendances de la tâche "{0}" ont bien été sauvegardées
 msg.info.activity.dependancesTypes.saved 	= Les types des dépendances de la tâche "{0}" ont bien été sauvegardées
 
-
 msg.info.activity.manageActivityDependances	= Vous ne pouvez plus changer les dépendances de la tâche "{0}" car elle a déjà été démarrée
-
 
 msg.info.activity.affect 	= La tâche "{0}" vous a bien été affectée
 
+msg.info.breakdownelement.none = Vous n'êtes affecté sur aucun projet actuellement
+msg.info.breakdownelement.default = Sélectionner un des projets 
 
 ##### Types de dépendnaces #################################
 finishToFinish	= fin à fin
@@ -209,14 +209,11 @@ admin.showSummary.title			= Détail d'un utilisateur
 admin.showSummary.bde			= Membres des projets ...
 admin.showSummary.tableBde		= Projets
 
-admin.showBdeSummary.title		= Détail d'un projet
-admin.showBdeSummary.users		= Utilisateurs du projet
-
 admin.summaryUser.showUserSummary =	Détail Utilisateur
 
 table.title.listUsers			= Liste des utilisateurs
 table.field.listUsers.firstName = Prénom
-table.field.listUsers.lastName  = Nom
+table.field.listUsers.lastName  = Prénom
 table.field.listUsers.login		= Login
 table.field.listUsers.role		= Rôle
 table.field.listUsers.edit		= Editer
@@ -231,5 +228,4 @@ table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.kind		= Type
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
-table.field.listBreakDownElements.details	= Détails
 table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
