--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -209,11 +209,14 @@ admin.showSummary.title			= Détail d'un utilisateur
 admin.showSummary.bde			= Membres des projets ...
 admin.showSummary.tableBde		= Projets
 
+admin.showBdeSummary.title		= Détail d'un projet
+admin.showBdeSummary.users		= Utilisateurs du projet
+
 admin.summaryUser.showUserSummary =	Détail Utilisateur
 
 table.title.listUsers			= Liste des utilisateurs
 table.field.listUsers.firstName = Prénom
-table.field.listUsers.lastName  = Prénom
+table.field.listUsers.lastName  = Nom
 table.field.listUsers.login		= Login
 table.field.listUsers.role		= Rôle
 table.field.listUsers.edit		= Editer
@@ -228,4 +231,5 @@ table.field.listBreakDownElements.endDate	= Date de fin
 table.field.listBreakDownElements.kind		= Type
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
+table.field.listBreakDownElements.details	= Détails
 table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
