--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -206,7 +206,7 @@ admin.listUsers.title			= Administration des utilisateurs
 admin.menu.createBreakdownElement		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
 admin.showSummary.title			= Détail d'un utilisateur
-admin.showSummary.bde			= Membres des projets ...
+admin.showSummary.bde			= Membres du projet ...
 admin.showSummary.tableBde		= Projets
 
 admin.showBdeSummary.title		= Détail d'un projet
