*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -8,7 +8,7 @@ errors.persistance.doublon				= L'objet "{0}" existe déjà
 errors.persistance.activity.foreignKey	= Problème de clé étrangère.
 errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
 errors.session.invalid					= Vous n'êtes pas encore connecté, veuillez saisir votre login et votre mot de passe 
-errors.admin.deleteCurrentUser			= Vous ne pouvez pas supprimer vous-même.
+errors.admin.deleteCurrentUser			= Vous ne pouvez pas supprimer votre compte.
 
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
@@ -140,7 +140,7 @@ msg.info.activity.affect 	= La tâche "{0}" vous a bien été affectée
 msg.info.breakdownelement.none = Vous n'êtes affecté sur aucun projet actuellement
 msg.info.breakdownelement.default = Sélectionner un des projets 
 
-##### Types de dépendnaces #################################
+##### Types de dépendances #################################
 finishToFinish	= fin à fin
 startToStart	= debut à debut
 startToFinish	= début à fin
@@ -156,8 +156,15 @@ start	= Commencer
 finish	= Terminer
 affect 	= S'affecter
 
+##### BreakDownElements #################################
+project		= Projet
+iteration 	= Itération
+phase		= Phase
+
 ##### Rôles d'un utilisateur #################################
-userrole.invalid.user 			= Role inconnu
+admin							= Administrateur
+dev 							= Participant
+userrole.invalid.user 			= Rôle inconnu
 
 ##### Menu #################################
 menu.listActivities 			= Lister les tâches
