--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -24,7 +24,8 @@ page.title.manageActivityCreation		= Gérer une tâche
 page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
-page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
+page.title.showActivityGraph			= Voir le graphe du projet
+page.title.listFreeActivities			= Liste des tâches libres
 
 ##### Formulaires  et tables #################################
 
