*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -178,10 +178,10 @@ menu.showActivityGraph			= Voir le graphe du projet
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
-admin.admin.deleteConfirmation	= Confirmer l'effacement de l'utilisateur ?
+admin.admin.deleteConfirmation	= Confirmer la suppression de l'utilisateur ?
 admin.addUser.title				= Administration d'un utilisateur
-admin.addUser.firstName			= Nom
-admin.addUser.lastName			= Prénom
+admin.addUser.firstName			= Prénom
+admin.addUser.lastName			= Nom
 admin.button.validate			= Valider
 admin.error.password			= Veuillez vérifier votre mot de passe
 admin.field.checkPassword		= Contrôle du mot de passe
@@ -214,7 +214,7 @@ admin.listUsers.title			= Administration des utilisateurs
 admin.menu.createBreakdownElement		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
 admin.showSummary.title			= Détail d'un utilisateur
-admin.showSummary.bde			= Membres du projet ...
+admin.showSummary.bde			= Membres du projet
 admin.showSummary.tableBde		= Projets
 
 admin.showBdeSummary.title		= Détail d'un projet
