Corrections dans la partie admin. Ajout du CU_adm_3

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -195,17 +195,24 @@ admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs a
 admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
 admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
 admin.addBreakdownElement.kind 							= type de projet
-admin.msg.info.breakdownelement.validate				= Le projet a bien été enregistré
+admin.msg.info.breakdownelement.insert					= Le projet a bien été ajouté
 admin.msg.info.breakdownelement.modify					= Le projet a bien été modifié
-admin.msg.error.breakdownelement.insert					= L'insertion a échoué
-admin.msg.error.breakdownelement.modify					= La modification a échoué
+admin.msg.info.breakdownelement.copy					= Le projet a bien été copié
+admin.msg.error.breakdownelement.insert.global			= L'insertion a échoué
+admin.msg.error.breakdownelement.modify.global			= La modification a échoué
+admin.msg.error.breakdownelement.copy.global			= La copie a échoué
+admin.msg.error.breakdownelement.insert.doublon			= L'insertion a échoué : le nom de ce projet existe déjà
+admin.msg.error.breakdownelement.modify.doublon			= La modification a échoué : le nom de ce projet existe déjà
+admin.msg.error.breakdownelement.copy.doublon			= La copie a échoué : le nom de ce projet existe déjà
 
 admin.field.checkPassword		= Vérification du mot de passe
 
-admin.msg.info.user.validate	= L'utilisateur a bien été enregistré
-admin.msg.info.user.modify		= L'utilisateur a bien été modifié
-admin.msg.error.user.insert		= L'insertion a échoué
-admin.msg.error.user.modify		= La modification a échoué
+admin.msg.info.user.validate		= L'utilisateur a bien été enregistré
+admin.msg.info.user.modify			= L'utilisateur a bien été modifié
+admin.msg.error.user.insert.global	= L'insertion a échoué
+admin.msg.error.user.modify.global	= La modification a échoué
+admin.msg.error.user.insert.doublon	= L'insertion a échoué : le login de cet utilisateur existe déjà
+admin.msg.error.user.modify.doublon	= La modification a échoué : le login de cet utilisateur existe déjà
 
 admin.menu.home					= Accueil
 admin.menu.createUser			= Création utilisateur
@@ -241,3 +248,5 @@ table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
 table.field.listBreakDownElements.details	= Détails
 table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
+table.field.listBreakDownElements.copy.title= Copier
+table.field.listBreakDownElements.copy.text	= Copier
