*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -24,8 +24,10 @@ page.title.manageActivityCreation		= Gérer une tâche
 page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
-page.title.showActivityGraph			= Voir le graphe du projet
-page.title.listFreeActivities			= Liste des tâches libres
+page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
+page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
+page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
+page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
 
 ##### Formulaires  et tables #################################
 
@@ -175,6 +177,7 @@ menu.listChangeStateActivities  = Tâches pouvant changer d'état
 menu.historizedActivities		= Historique des tâches
 menu.listFreeActivities			= Tâches libres
 menu.showActivityGraph			= Voir le graphe du projet
+menu.showTeamActivitiesSummary  = Toutes les tâches du projet
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
@@ -248,5 +251,12 @@ table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
 table.field.listBreakDownElements.details	= Détails
 table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
+
 table.field.listBreakDownElements.copy.title= Copier
 table.field.listBreakDownElements.copy.text	= Copier
+table.title.showTeamActivitiesSummary 					= Liste des activités du projet
+table.field.showTeamActivitiesSummary.name				= Nom
+table.field.showTeamActivitiesSummary.state				= Etat
+table.field.showTeamActivitiesSummary.userLastName 		= Participant
+table.field.showTeamActivitiesSummary.startDate			= Date de début de tâche
+table.field.showTeamActivitiesSummary.endDate			= Date de fin de tâche
