Activity On Going - PARTIE I

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -41,8 +41,10 @@ form.field.activity.name					= Nom
 form.field.activity.details					= Descritpion
 form.field.activity.state					= Etat
 form.field.activity.startDate				= Date de lancement
-form.field.activity.endDate					= Date de cloture	
+form.field.activity.endDate					= Date de cloture
+form.field.activity.onGoing					= On Going - Sans fin	
 form.field.activity.checkbox.freeActivity 	= Activité libre ?
+form.field.activity.checkbox.activityOnGoing 	= Activité sans fin ?
 
 	## Login
 button.title.login		= Connexion
@@ -79,6 +81,7 @@ form.tooltip.manageActivityCreation.next.insert		= Ajouter cette tâche et passer
 form.tooltip.manageActivityCreation.next.update		= Modifier cette tâche et passer à la modification de ses dépendances
 form.tooltip.manageActivityCreation.previous		= Revenir à la liste des tâches sans sauvegarder
 table.tooltip.activity.checkbox.freeActivity		= Ne pas cocher cette case revient a s'affecter la tâche
+table.tooltip.activity.checkbox.activityOnGoing		= Cocher cette case signifie que la tache est sans fin
 
 	## manageActivityDependances
 	
