Ajout du libellé des champs endDate et startDate du formulaire addBreakdownElement

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -197,6 +197,8 @@ admin.addBreakdownElement.title							= Administration du projet
 admin.addBreakdownElement.prefix						= Préfixe
 admin.addBreakdownElement.name							= Nom
 admin.addBreakdownElement.details						= Description
+admin.addBreakdownElement.endDate						= Date de fin
+admin.addBreakdownElement.startDate						= Date de départ
 admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs au projet
 admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
 admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
