*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -231,6 +231,11 @@ admin.listUsers.title			= Liste des utilisateurs
 admin.showSummary.title			= Détail d'un utilisateur
 admin.showSummary.bde			= Membres du projet
 admin.showSummary.tableBde		= Projets
+admin.menu.import				= Importer des Activités
+
+admin.import.title				= Charger un fichier
+admin.import.path				= Chemin du fichier
+admin.button.import				= Charger
 
 admin.showBdeSummary.title		= Détail d'un projet
 admin.showBdeSummary.users		= Utilisateurs du projet
