ajout de l'action ListEvents

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -28,6 +28,8 @@ page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
 page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
+page.title.listEvents					= List des evenements du projet
+
 
 ##### Formulaires  et tables #################################
 
@@ -114,6 +116,22 @@ form.table.successors.title						= Successeurs
 form.table.successors.field.successorState		= Etat
 form.table.successors.field.successor			= Successeur
 form.table.succ_pred.field.linkType				= Type de lien
+
+
+	## listEvents
+table.title.listEventsNotOccured					= Liste des evenements pas encore passés
+table.field.listEventsNotOccured.edit				= Modifier
+table.field.listEventsNotOccured.delete				= Supprimer
+table.field.listEventsNotOccured.signalOccurence	= Signaler
+table.tooltip.listEventsNotOccured.edit				= Modifier l'évènement
+table.tooltip.listEventsNotOccured.delete			= Supprimer l'évènement
+table.tooltip.listEventsNotOccured.signalOccurence	= Signaler l'occurence de  l'évènement
+
+table.title.listEventsOccured						= Liste des evenements passés
+
+table.field.listEvents.name							= Nom
+table.field.listEvents.details						= Détails
+table.field.listEvents.ActivityName					= Activité
 
 	## messages
 msg.error 	= Erreur
