*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -253,6 +253,9 @@ admin.menu.import				= Importer des Activités
 
 admin.import.title				= Charger un fichier
 admin.import.path				= Chemin du fichier
+admin.manageDpe.title			= Affecter les activités
+admin.manageDpe.emptyList		= Votre fichier ne contient pas d'activités
+admin.manageDpe.fileError		= Votre fichier ne semble pas valide
 admin.button.import				= Charger
 
 admin.showBdeSummary.title		= Détail d'un projet
