*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -285,6 +285,9 @@ table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
 
 table.field.listBreakDownElements.copy.title= Copier
 table.field.listBreakDownElements.copy.text	= Copier
+table.field.listBreakDownElements.import.text	= Importer
+table.field.listBreakDownElements.import.title	= Importer
+
 table.title.showTeamActivitiesSummary 					= Liste des activités du projet
 table.field.showTeamActivitiesSummary.name				= Nom
 table.field.showTeamActivitiesSummary.state				= Etat
