*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -256,6 +256,11 @@ admin.import.path				= Chemin du fichier
 admin.manageDpe.title			= Affecter les activités
 admin.manageDpe.emptyList		= Votre fichier ne contient pas d'activités
 admin.manageDpe.fileError		= Votre fichier ne semble pas valide
+admin.manageDpe.activities		= Activités
+admin.manageDpe.selectionne		= Oui/Non
+admin.manageDpe.confirm			= Appliquer l'importation ?
+admin.manageDpe.listActivities	= Liste des Activités importées
+admin.manageDpe.confirmation	= Votre importation a réussie
 admin.button.import				= Charger
 
 admin.showBdeSummary.title		= Détail d'un projet
