Intégration de l'action terminer un projet

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -292,6 +292,8 @@ table.field.listBreakDownElements.copy.title= Copier
 table.field.listBreakDownElements.copy.text	= Copier
 table.field.listBreakDownElements.import.text	= Importer
 table.field.listBreakDownElements.import.title	= Importer
+table.field.listBreakDownElements.finish.text 	= Terminer
+table.field.listBreakDownElements.finish.title 	= Terminer
 
 table.title.showTeamActivitiesSummary 					= Liste des activités du projet
 table.field.showTeamActivitiesSummary.name				= Nom
