*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -4,6 +4,7 @@ errors.global							= Une erreur interne non identifiée s'est produite. Essayez 
 
 errors.persistance.global				= Erreur d'accés à la base de données
 errors.persistance.select				= Erreur au moment de la récupération des données dans la base de données
+errors.persistance.delete				= Erreur au moment de la suppression danns la base de données	
 errors.persistance.doublon				= L'objet "{0}" existe déjà
 errors.persistance.activity.foreignKey	= Problème de clé étrangère.
 errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
@@ -255,7 +256,7 @@ admin.import.title				= Charger un fichier
 admin.import.path				= Chemin du fichier
 admin.manageDpe.title			= Affecter les activités
 admin.manageDpe.emptyList		= Votre fichier ne contient pas d'activités
-admin.manageDpe.fileError		= Votre fichier ne semble pas valide
+admin.manageDpe.fileError		= Le fichier {0} ne semble pas valide
 admin.manageDpe.activities		= Activités
 admin.manageDpe.selectionne		= Oui/Non
 admin.manageDpe.confirm			= Appliquer l'importation ?
