Listage et modif des evenements

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -29,7 +29,8 @@ page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
 page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
-page.title.listEvents					= List des evenements du projet
+page.title.listEvents					= Liste des évènements du projet
+page.title.updateEvent					= Modifier un évènement
 
 
 ##### Formulaires  et tables #################################
@@ -132,7 +133,16 @@ table.title.listEventsOccured						= Liste des evenements passés
 
 table.field.listEvents.name							= Nom
 table.field.listEvents.details						= Détails
-table.field.listEvents.ActivityName					= Activité
+table.field.listEvents.activityName					= Activité
+
+
+	## updateEvent
+form.title.updateEvent			= Modifier un évènement
+form.field.event.name			= Nom
+form.field.event.details		= Description
+form.tooltip.updateEvent.finish = Modifier l'évènement
+
+
 
 	## messages
 msg.error 	= Erreur
@@ -200,6 +210,7 @@ menu.historizedActivities		= Historique des tâches
 menu.listFreeActivities			= Tâches libres
 menu.showActivityGraph			= Voir le graphe du projet
 menu.showTeamActivitiesSummary  = Toutes les tâches du projet
+menu.listEvents					= Lister les évènements
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
