*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -120,6 +120,9 @@ form.table.successors.field.successor			= Successeur
 form.table.succ_pred.field.linkType				= Type de lien
 
 
+	## showActivityGraph
+graph.freeActivity	= Activités libres
+
 	## listEvents
 table.title.listEventsNotOccured					= Liste des evenements pas encore passés
 table.field.listEventsNotOccured.edit				= Modifier
