--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -21,6 +21,7 @@ errors.champ.numerique			=Le champ {0} doit être numérique.
 ##### Titres des pages #################################
 page.title.login 						= Identification
 page.title.listActivities 				= Liste des tâches
+page.title.listFreeActivities			= Liste des tâches libres du projet
 page.title.manageActivityCreation		= Gérer une tâche
 page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
