*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -271,7 +271,6 @@ admin.import.title				= Charger un fichier
 admin.import.path				= Chemin du fichier
 admin.manageDpe.title			= Affecter les activités
 admin.manageDpe.emptyList		= Votre fichier ne contient pas d'activités
-admin.manageDpe.fileError		= Le fichier {0} ne semble pas valide
 admin.manageDpe.activities		= Activités
 admin.manageDpe.selectionne		= Oui/Non
 admin.manageDpe.confirm			= Appliquer l'importation ?
@@ -317,3 +316,8 @@ table.field.showTeamActivitiesSummary.state				= Etat
 table.field.showTeamActivitiesSummary.userLastName 		= Participant
 table.field.showTeamActivitiesSummary.startDate			= Date de début de tâche
 table.field.showTeamActivitiesSummary.endDate			= Date de fin de tâche
+
+##### Fichier DPE #################################
+error.file.find	= Impossible de trouver le fichier {0}
+error.file.read = Impossible de lire le fichier {0}
+error.file.parse = Impossible de parser le fichier {0}
