--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -262,6 +262,8 @@ admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
 admin.menu.createBreakdownElement		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
+admin.listUsers.confirmationDel	= L'utilisateur a été correctement supprimé
+admin.listBde.confirmationDel	= Le projet a été correctement supprimé
 admin.showSummary.title			= Détail d'un utilisateur
 admin.showSummary.bde			= Membres du projet
 admin.showSummary.tableBde		= Projets
