Graph : gestion indépendante de l'OS

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -11,6 +11,8 @@ errors.login.invalide					= Votre identification est incorrecte, veuillez réessa
 errors.session.invalid					= Vous n'êtes pas encore connecté, veuillez saisir votre login et votre mot de passe 
 errors.admin.deleteCurrentUser			= Vous ne pouvez pas supprimer votre compte.
 
+errors.graph.dotNotInstalled			= Un problème est survenu lors de la génération du graphe. Le programme dot n'est surement pas installé sur le serveur.
+
 ##### Controles génériques ###############################
 errors.champ.obligatoire		=Le champ {0} est obligatoire.
 errors.champ.date				=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
@@ -32,6 +34,7 @@ page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
 page.title.listEvents					= Liste des évènements du projet
 page.title.updateEvent					= Modifier un évènement
+page.title.showActivityGraph			= Voir le graphe du projet
 
 
 ##### Formulaires  et tables #################################
