ajout gestion evenement

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -45,14 +45,17 @@ form.button.finish		= Valider
 form.button.next		= Suivant
 form.button.previous	= Précédent
 
-form.field.activity.name					= Nom
-form.field.activity.details					= Descritpion
-form.field.activity.state					= Etat
-form.field.activity.startDate				= Date de lancement
-form.field.activity.endDate					= Date de cloture
-form.field.activity.onGoing					= On Going - Sans fin	
-form.field.activity.checkbox.freeActivity 	= Activité libre ?
+form.field.activity.name						= Nom
+form.field.activity.details						= Descritpion
+form.field.activity.state						= Etat
+form.field.activity.startDate					= Date de lancement
+form.field.activity.endDate						= Date de cloture
+form.field.activity.onGoing						= On Going - Sans fin	
+form.field.activity.checkbox.freeActivity 		= Activité libre ?
 form.field.activity.checkbox.activityOnGoing 	= Activité sans fin ?
+form.field.activity.checkbox.event				= Associé a un événement ?
+form.field.activity.checkbox.eventName			= Nom de l'événement
+form.field.activity.checkbox.eventDetails		= Description de l'événement
 
 	## Login
 button.title.login		= Connexion
