--- a/Woops/.settings/org.eclipse.jdt.ui.prefs
+++ b/Woops/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
-#Tue Nov 15 23:44:42 CET 2005
+#Mon Mar 06 22:48:18 CET 2006
 eclipse.preferences.version=1
+internal.default.compliance=default
 org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?>\r\n<templates/>
