n'updater pas ce fichier si ca marche chez vous

--- a/Woops/.settings/org.eclipse.jdt.ui.prefs
+++ b/Woops/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Mon Mar 06 22:48:18 CET 2006
+#Sun Jan 08 20:19:53 CET 2006
 eclipse.preferences.version=1
 internal.default.compliance=default
-org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?>\r\n<templates/>
+org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
