*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -285,6 +285,8 @@ admin.manageDpe.confirm			= Appliquer l'importation ?
 admin.manageDpe.listActivities	= Liste des Activités importées
 admin.manageDpe.confirmation	= Votre importation a réussie
 admin.button.import				= Charger
+admin.importFile.info			= Information
+admin.importFile.message		= Veuillez sélectionner un fichier dpe pour importer ses activités
 
 admin.showBdeSummary.title		= Détail d'un projet
 admin.showBdeSummary.users		= Utilisateurs du projet
