*** empty log message ***

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -4,7 +4,7 @@ errors.global							= Une erreur interne non identifiée s'est produite. Essayez 
 
 errors.persistance.global				= Erreur d'accés à la base de données
 errors.persistance.select				= Erreur au moment de la récupération des données dans la base de données
-errors.persistance.delete				= Erreur au moment de la suppression danns la base de données	
+errors.persistance.delete				= Erreur au moment de la suppression dans la base de données	
 errors.persistance.doublon				= L'objet "{0}" existe déjà
 errors.persistance.activity.foreignKey	= Problème de clé étrangère.
 errors.login.invalide					= Votre identification est incorrecte, veuillez réessayer.
@@ -19,18 +19,15 @@ errors.champ.date				=Le champ {0} n'est pas une date valide (jj/mm/aaaa).
 errors.champ.numerique			=Le champ {0} doit être numérique.
 
 
-
 ##### Titres des pages #################################
 page.title.login 						= Identification
 page.title.listActivities 				= Liste des tâches
-page.title.listFreeActivities			= Liste des tâches libres du projet
+page.title.listFreeActivities			= Liste des tâches libres
+page.title.listHistorizedActivities		= Historique des tâches
 page.title.manageActivityCreation		= Gérer une tâche
 page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
-page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
-page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
-page.title.listChangeStateActivities	= Liste des tâches pouvant changer d'état
 page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
 page.title.listEvents					= Liste des évènements du projet
 page.title.updateEvent					= Modifier un évènement
@@ -51,11 +48,11 @@ form.field.activity.state						= Etat
 form.field.activity.startDate					= Date de lancement
 form.field.activity.endDate						= Date de cloture
 form.field.activity.onGoing						= On Going - Sans fin	
-form.field.activity.checkbox.freeActivity 		= Activité libre ?
-form.field.activity.checkbox.activityOnGoing 	= Activité sans fin ?
-form.field.activity.checkbox.event				= Associé a un événement ?
-form.field.activity.checkbox.eventName			= Nom de l'événement
-form.field.activity.checkbox.eventDetails		= Description de l'événement
+form.field.activity.checkbox.freeActivity 		= Libre ?
+form.field.activity.checkbox.activityOnGoing 	= Sans fin ?
+form.field.activity.checkbox.event				= Associée à un évènement ?
+form.field.activity.checkbox.eventName			= Nom de l'évènement
+form.field.activity.checkbox.eventDetails		= Description de l'évènement
 
 	## Login
 button.title.login		= Connexion
@@ -64,9 +61,9 @@ form.field.login		= Login
 form.field.password 	= Mot de passe
 	
 	## Activities list
-table.title.listActivities 						= Liste des tâches
-table.title.listChangeStateActivities 			= Liste des tâches pouvant changer d'état
+table.title.listActivities 						= Liste des tâches à réaliser
 table.title.listFreeActivities					= Liste des tâches libres
+table.title.listHistorizedActivities			= Liste des tâches réalisées
 table.field.listActivities.name 				= Nom
 table.field.listActivities.details 				= Description
 table.field.listActivities.state 				= Etat
@@ -212,15 +209,14 @@ dev 							= Participant
 userrole.invalid.user 			= Rôle inconnu
 
 ##### Menu #################################
-menu.listActivities 			= Lister les tâches
+menu.listActivities 			= Visualiser ses tâches 
 menu.manageActivityCreation		= Créer une nouvelle tâche
 menu.deconnection 				= Se déconnecter
-menu.listChangeStateActivities  = Tâches pouvant changer d'état
-menu.historizedActivities		= Historique des tâches
-menu.listFreeActivities			= Tâches libres
-menu.showActivityGraph			= Voir le graphe du projet
-menu.showTeamActivitiesSummary  = Toutes les tâches du projet
-menu.listEvents					= Lister les évènements
+menu.historizedActivities		= Afficher l'historique de ses tâches
+menu.listFreeActivities			= Consulter les tâches libres
+menu.showActivityGraph			= Constituer le graphe de dépendances
+menu.showTeamActivitiesSummary  = Lister toutes les tâches du projet
+menu.listEvents					= Connaître les évènements
 
 ##### Administration #################################
 admin.admin.title				= Page d'administration
