remplacement du mot projet par processus

--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -28,10 +28,10 @@ page.title.manageActivityCreation		= Gérer une tâche
 page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
-page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
-page.title.listEvents					= Liste des évènements du projet
+page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du processus
+page.title.listEvents					= Liste des évènements du processus
 page.title.updateEvent					= Modifier un évènement
-page.title.showActivityGraph			= Voir le graphe du projet
+page.title.showActivityGraph			= Voir le graphe du processus
 
 
 ##### Formulaires  et tables #################################
@@ -179,8 +179,8 @@ msg.info.activity.manageActivityDependances	= Vous ne pouvez plus changer les dé
 
 msg.info.activity.affect 	= La tâche "{0}" vous a bien été affectée
 
-msg.info.breakdownelement.none = Vous n'êtes affecté sur aucun projet actuellement
-msg.info.breakdownelement.default = Sélectionner un des projets 
+msg.info.breakdownelement.none = Vous n'êtes affecté sur aucun processus actuellement
+msg.info.breakdownelement.default = Sélectionner un des processus 
 
 ##### Types de dépendances #################################
 finishToFinish	= fin à fin
@@ -199,7 +199,7 @@ finish	= Terminer
 affect 	= S'affecter
 
 ##### BreakDownElements #################################
-project		= Projet
+project		= processus
 iteration 	= Itération
 phase		= Phase
 
@@ -215,7 +215,7 @@ menu.deconnection 				= Se déconnecter
 menu.historizedActivities		= Afficher l'historique de ses tâches
 menu.listFreeActivities			= Consulter les tâches libres
 menu.showActivityGraph			= Constituer le graphe de dépendances
-menu.showTeamActivitiesSummary  = Lister toutes les tâches du projet
+menu.showTeamActivitiesSummary  = Lister toutes les tâches du processus
 menu.listEvents					= Connaître les évènements
 
 ##### Administration #################################
@@ -229,25 +229,25 @@ admin.error.password			= Veuillez vérifier votre mot de passe
 admin.field.checkPassword		= Contrôle du mot de passe
 admin.addUser.role				= Rôle
 
-admin.addBreakdownElement.title							= Administration du projet
+admin.addBreakdownElement.title							= Administration du processus
 admin.addBreakdownElement.prefix						= Préfixe
 admin.addBreakdownElement.name							= Nom
 admin.addBreakdownElement.details						= Description
 admin.addBreakdownElement.endDate						= Date de fin
 admin.addBreakdownElement.startDate						= Date de départ
-admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs au projet
+admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs au processus
 admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
 admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
-admin.addBreakdownElement.kind 							= type de projet
-admin.msg.info.breakdownelement.insert					= Le projet a bien été ajouté
-admin.msg.info.breakdownelement.modify					= Le projet a bien été modifié
-admin.msg.info.breakdownelement.copy					= Le projet a bien été copié
+admin.addBreakdownElement.kind 							= type de processus
+admin.msg.info.breakdownelement.insert					= Le processus a bien été ajouté
+admin.msg.info.breakdownelement.modify					= Le processus a bien été modifié
+admin.msg.info.breakdownelement.copy					= Le processus a bien été copié
 admin.msg.error.breakdownelement.insert.global			= L'insertion a échoué
 admin.msg.error.breakdownelement.modify.global			= La modification a échoué
 admin.msg.error.breakdownelement.copy.global			= La copie a échoué
-admin.msg.error.breakdownelement.insert.doublon			= L'insertion a échoué : le nom de ce projet existe déjà
-admin.msg.error.breakdownelement.modify.doublon			= La modification a échoué : le nom de ce projet existe déjà
-admin.msg.error.breakdownelement.copy.doublon			= La copie a échoué : le nom de ce projet existe déjà
+admin.msg.error.breakdownelement.insert.doublon			= L'insertion a échoué : le nom de ce processus existe déjà
+admin.msg.error.breakdownelement.modify.doublon			= La modification a échoué : le nom de ce processus existe déjà
+admin.msg.error.breakdownelement.copy.doublon			= La copie a échoué : le nom de ce processus existe déjà
 
 admin.field.checkPassword		= Vérification du mot de passe
 
@@ -262,13 +262,13 @@ admin.menu.home					= Accueil
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
-admin.menu.createBreakdownElement		= Création projet
+admin.menu.createBreakdownElement		= Création processus
 admin.listUsers.title			= Liste des utilisateurs
 admin.listUsers.confirmationDel	= L'utilisateur a été correctement supprimé
-admin.listBde.confirmationDel	= Le projet a été correctement supprimé
+admin.listBde.confirmationDel	= Le processus a été correctement supprimé
 admin.showSummary.title			= Détail d'un utilisateur
-admin.showSummary.bde			= Membres du projet
-admin.showSummary.tableBde		= Projets
+admin.showSummary.bde			= Membres du processus
+admin.showSummary.tableBde		= processus
 admin.menu.import				= Importer des Activités
 
 admin.import.title				= Charger un fichier
@@ -284,8 +284,8 @@ admin.button.import				= Charger
 admin.importFile.info			= Information
 admin.importFile.message		= Veuillez sélectionner un fichier dpe pour importer ses activités
 
-admin.showBdeSummary.title		= Détail d'un projet
-admin.showBdeSummary.users		= Utilisateurs du projet
+admin.showBdeSummary.title		= Détail d'un processus
+admin.showBdeSummary.users		= Utilisateurs du processus
 
 admin.summaryUser.showUserSummary =	Détail Utilisateur
 
@@ -298,8 +298,8 @@ table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 table.field.listUsers.deleteConfirmation	= Supprimer cet utilisateur ?
 
-table.title.listBreakDownElements 			= Liste des projets
-table.field.listBreakDownElements.name		= Nom du projet
+table.title.listBreakDownElements 			= Liste des processuss
+table.field.listBreakDownElements.name		= Nom du processus
 table.field.listBreakDownElements.prefix	= Préfixe
 table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
@@ -307,7 +307,7 @@ table.field.listBreakDownElements.kind		= Type
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
 table.field.listBreakDownElements.details	= Détails
-table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
+table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce processus ?
 
 table.field.listBreakDownElements.copy.title= Copier
 table.field.listBreakDownElements.copy.text	= Copier
@@ -316,7 +316,7 @@ table.field.listBreakDownElements.import.title	= Importer
 table.field.listBreakDownElements.finish.text 	= Terminer
 table.field.listBreakDownElements.finish.title 	= Terminer
 
-table.title.showTeamActivitiesSummary 					= Liste des activités du projet
+table.title.showTeamActivitiesSummary 					= Liste des activités du processus
 table.field.showTeamActivitiesSummary.name				= Nom
 table.field.showTeamActivitiesSummary.state				= Etat
 table.field.showTeamActivitiesSummary.userLastName 		= Participant
