--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -28,10 +28,10 @@ page.title.manageActivityCreation		= Gérer une tâche
 page.title.manageActivityDependances 	= Gérer une tâche
 page.title.manageDependancesTypes 		= Gérer une tâche
 page.title.showActivitySummary 			= Voir la fiche de détail d'une tâche
-page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du processus
-page.title.listEvents					= Liste des évènements du processus
+page.title.showTeamActivitiesSummary	= Liste de toutes les tâches du projet
+page.title.listEvents					= Liste des évènements du projet
 page.title.updateEvent					= Modifier un évènement
-page.title.showActivityGraph			= Voir le graphe du processus
+page.title.showActivityGraph			= Voir le graphe du projet
 
 
 ##### Formulaires  et tables #################################
@@ -43,11 +43,11 @@ form.button.next		= Suivant
 form.button.previous	= Précédent
 
 form.field.activity.name						= Nom
-form.field.activity.details						= Descritpion
+form.field.activity.details						= Description
 form.field.activity.state						= Etat
 form.field.activity.startDate					= Date de lancement
-form.field.activity.endDate						= Date de cloture
-form.field.activity.onGoing						= On Going - Sans fin	
+form.field.activity.endDate						= Date de clôture
+form.field.activity.onGoing						= Sans fin	
 form.field.activity.checkbox.freeActivity 		= Libre ?
 form.field.activity.checkbox.activityOnGoing 	= Sans fin ?
 form.field.activity.checkbox.event				= Associée à un évènement ?
@@ -88,23 +88,23 @@ form.tooltip.manageActivityCreation.finish.update	= Modifier cette tâche et reve
 form.tooltip.manageActivityCreation.next.insert		= Ajouter cette tâche et passer à l'ajout de ses dépendances
 form.tooltip.manageActivityCreation.next.update		= Modifier cette tâche et passer à la modification de ses dépendances
 form.tooltip.manageActivityCreation.previous		= Revenir à la liste des tâches sans sauvegarder
-table.tooltip.activity.checkbox.freeActivity		= Ne pas cocher cette case revient a s'affecter la tâche
+table.tooltip.activity.checkbox.freeActivity		= Cocher cette case signifie que la tâche n'est affecté à aucun participant
 table.tooltip.activity.checkbox.activityOnGoing		= Cocher cette case signifie que la tache est sans fin
 
 	## manageActivityDependances
 	
-form.title.manageActivityDependances			= Gérer les dépedances d'une tâche
+form.title.manageActivityDependances			= Gérer les dépendances d'une tâche
 form.field.manageActivityDependances			= Liste des tâches
 form.field.manageActivityDependances.toAdd 		= Possibles
 form.field.manageActivityDependances.added		= Effectifs
 form.tooltip.manageActivityDependances.finish	= Sauvegarder les dépendances et revenir à la liste des tâches
-form.tooltip.manageActivityDependances.next		= Sauvegarder les dépendances et passer à la gestion des types des dépendances
+form.tooltip.manageActivityDependances.next		= Sauvegarder les dépendances et passer à la gestion des types de dépendance
 form.tooltip.manageActivityDependances.previous	= Revenir à la modification de la tâche sans sauvegarder les dépendances
 
 
 	## manageDependancesTypes
 	
-list.title.manageDependancesTypes				= Liste des dépendances et leur type associé
+list.title.manageDependancesTypes				= Liste des dépendances et leurs types associés
 list.manageDependancesTypes.predecessor 		= Prédecesseur
 list.manageDependancesTypes.predecessorState	= Etat
 list.manageDependancesTypes.columngroup.title	= Type
@@ -115,7 +115,7 @@ list.tooltip.manageDependancesTypes.previous	= Revenir à la gestion des dépendan
 	## showActivitySummary
 	
 form.title.showActivitySummary					= Fiche de détail d'une tâche
-form.table.predecessors.title					= Prédécésseurs
+form.table.predecessors.title					= Prédécesseurs
 form.table.predecessors.field.predecessor		= Prédécesseur
 form.table.predecessors.field.predecessorState	= Etat
 form.table.successors.title						= Successeurs
@@ -125,22 +125,22 @@ form.table.succ_pred.field.linkType				= Type de lien
 
 
 	## showActivityGraph
-graph.freeActivity	= Activités libres
+graph.freeActivity	= Tâches libres
 
 	## listEvents
-table.title.listEventsNotOccured					= Liste des evenements pas encore passés
+table.title.listEventsNotOccured					= Liste des évènements en attente
 table.field.listEventsNotOccured.edit				= Modifier
 table.field.listEventsNotOccured.delete				= Supprimer
 table.field.listEventsNotOccured.signalOccurence	= Signaler
 table.tooltip.listEventsNotOccured.edit				= Modifier l'évènement
 table.tooltip.listEventsNotOccured.delete			= Supprimer l'évènement
-table.tooltip.listEventsNotOccured.signalOccurence	= Signaler l'occurence de  l'évènement
+table.tooltip.listEventsNotOccured.signalOccurence	= Signaler l'occurence de l'évènement
 
-table.title.listEventsOccured						= Liste des evenements passés
+table.title.listEventsOccured						= Liste des évènements passés
 
 table.field.listEvents.name							= Nom
 table.field.listEvents.details						= Détails
-table.field.listEvents.activityName					= Activité
+table.field.listEvents.activityName					= Tâche
 
 
 	## updateEvent
@@ -173,14 +173,14 @@ msg.info.activity.updated.affectation		= La tâche libre "{0}" a été modifiée. El
 msg.info.activity.updated.liberation		= La tâche libre "{0}" a été modifiée. Elle a été liberée.
 
 msg.info.activity.dependances.saved 		= Les dépendances de la tâche "{0}" ont bien été sauvegardées
-msg.info.activity.dependancesTypes.saved 	= Les types des dépendances de la tâche "{0}" ont bien été sauvegardées
+msg.info.activity.dependancesTypes.saved 	= Les types de dépendance de la tâche "{0}" ont bien été sauvegardés
 
 msg.info.activity.manageActivityDependances	= Vous ne pouvez plus changer les dépendances de la tâche "{0}" car elle a déjà été démarrée
 
 msg.info.activity.affect 	= La tâche "{0}" vous a bien été affectée
 
-msg.info.breakdownelement.none = Vous n'êtes affecté sur aucun processus actuellement
-msg.info.breakdownelement.default = Sélectionner un des processus 
+msg.info.breakdownelement.none = Vous n'êtes affecté sur aucun projet actuellement
+msg.info.breakdownelement.default = Sélectionner un des projet
 
 ##### Types de dépendances #################################
 finishToFinish	= fin à fin
@@ -199,7 +199,6 @@ finish	= Terminer
 affect 	= S'affecter
 
 ##### BreakDownElements #################################
-project		= processus
 iteration 	= Itération
 phase		= Phase
 
@@ -215,7 +214,7 @@ menu.deconnection 				= Se déconnecter
 menu.historizedActivities		= Afficher l'historique de ses tâches
 menu.listFreeActivities			= Consulter les tâches libres
 menu.showActivityGraph			= Constituer le graphe de dépendances
-menu.showTeamActivitiesSummary  = Lister toutes les tâches du processus
+menu.showTeamActivitiesSummary  = Lister toutes les tâches du projet
 menu.listEvents					= Connaître les évènements
 
 ##### Administration #################################
@@ -229,25 +228,25 @@ admin.error.password			= Veuillez vérifier votre mot de passe
 admin.field.checkPassword		= Contrôle du mot de passe
 admin.addUser.role				= Rôle
 
-admin.addBreakdownElement.title							= Administration du processus
+admin.addBreakdownElement.title							= Administration du projet
 admin.addBreakdownElement.prefix						= Préfixe
 admin.addBreakdownElement.name							= Nom
 admin.addBreakdownElement.details						= Description
 admin.addBreakdownElement.endDate						= Date de fin
-admin.addBreakdownElement.startDate						= Date de départ
-admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs au processus
-admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectes
-admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectes
-admin.addBreakdownElement.kind 							= type de processus
-admin.msg.info.breakdownelement.insert					= Le processus a bien été ajouté
-admin.msg.info.breakdownelement.modify					= Le processus a bien été modifié
-admin.msg.info.breakdownelement.copy					= Le processus a bien été copié
+admin.addBreakdownElement.startDate						= Date de début
+admin.addBreakdownElement.manageUserParticipation 		= Association utilisateurs au projet
+admin.addBreakdownElement.manageUserParticipation.toAdd = Utilisateurs non affectés
+admin.addBreakdownElement.manageUserParticipation.added = Utilisateurs affectés
+admin.addBreakdownElement.kind 							= Type de processus
+admin.msg.info.breakdownelement.insert					= Le projet a bien été ajouté
+admin.msg.info.breakdownelement.modify					= Le projet a bien été modifié
+admin.msg.info.breakdownelement.copy					= Le projet a bien été copié
 admin.msg.error.breakdownelement.insert.global			= L'insertion a échoué
 admin.msg.error.breakdownelement.modify.global			= La modification a échoué
 admin.msg.error.breakdownelement.copy.global			= La copie a échoué
-admin.msg.error.breakdownelement.insert.doublon			= L'insertion a échoué : le nom de ce processus existe déjà
-admin.msg.error.breakdownelement.modify.doublon			= La modification a échoué : le nom de ce processus existe déjà
-admin.msg.error.breakdownelement.copy.doublon			= La copie a échoué : le nom de ce processus existe déjà
+admin.msg.error.breakdownelement.insert.doublon			= L'insertion a échoué : le nom de ce projet existe déjà
+admin.msg.error.breakdownelement.modify.doublon			= La modification a échoué : le nom de ce projet existe déjà
+admin.msg.error.breakdownelement.copy.doublon			= La copie a échoué : le nom de ce projet existe déjà
 
 admin.field.checkPassword		= Vérification du mot de passe
 
@@ -262,14 +261,14 @@ admin.menu.home					= Accueil
 admin.menu.createUser			= Création utilisateur
 admin.menu.listUsers			= Lister les utilisateurs
 admin.listUsers.title			= Administration des utilisateurs
-admin.menu.createBreakdownElement		= Création processus
+admin.menu.createBreakdownElement		= Création projet
 admin.listUsers.title			= Liste des utilisateurs
 admin.listUsers.confirmationDel	= L'utilisateur a été correctement supprimé
-admin.listBde.confirmationDel	= Le processus a été correctement supprimé
+admin.listBde.confirmationDel	= Le projet a été correctement supprimé
 admin.showSummary.title			= Détail d'un utilisateur
-admin.showSummary.bde			= Membres du processus
-admin.showSummary.tableBde		= processus
-admin.menu.import				= Importer des Activités
+admin.showSummary.bde			= Participants du projet
+admin.showSummary.tableBde		= Projet
+admin.menu.import				= Importer des activités
 
 admin.import.title				= Charger un fichier
 admin.import.path				= Chemin du fichier
@@ -278,14 +277,14 @@ admin.manageDpe.emptyList		= Votre fichier ne contient pas d'activités
 admin.manageDpe.activities		= Activités
 admin.manageDpe.selectionne		= Oui/Non
 admin.manageDpe.confirm			= Appliquer l'importation ?
-admin.manageDpe.listActivities	= Liste des Activités importées
-admin.manageDpe.confirmation	= Votre importation a réussie
+admin.manageDpe.listActivities	= Liste des activités importées
+admin.manageDpe.confirmation	= L'importation s'est bien effectuée
 admin.button.import				= Charger
 admin.importFile.info			= Information
 admin.importFile.message		= Veuillez sélectionner un fichier dpe pour importer ses activités
 
-admin.showBdeSummary.title		= Détail d'un processus
-admin.showBdeSummary.users		= Utilisateurs du processus
+admin.showBdeSummary.title		= Détail d'un projet
+admin.showBdeSummary.users		= Utilisateurs du projet
 
 admin.summaryUser.showUserSummary =	Détail Utilisateur
 
@@ -298,8 +297,8 @@ table.field.listUsers.edit		= Editer
 table.field.listUsers.delete	= Supprimer
 table.field.listUsers.deleteConfirmation	= Supprimer cet utilisateur ?
 
-table.title.listBreakDownElements 			= Liste des processuss
-table.field.listBreakDownElements.name		= Nom du processus
+table.title.listBreakDownElements 			= Liste des projets
+table.field.listBreakDownElements.name		= Nom du projets
 table.field.listBreakDownElements.prefix	= Préfixe
 table.field.listBreakDownElements.startDate	= Date de départ
 table.field.listBreakDownElements.endDate	= Date de fin
@@ -307,7 +306,7 @@ table.field.listBreakDownElements.kind		= Type
 table.field.listBreakDownElements.edit 		= Editer
 table.field.listBreakDownElements.delete	= Supprimer
 table.field.listBreakDownElements.details	= Détails
-table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce processus ?
+table.field.listBreakDownElements.deleteConfirmation	= Supprimer ce projet ?
 
 table.field.listBreakDownElements.copy.title= Copier
 table.field.listBreakDownElements.copy.text	= Copier
@@ -316,7 +315,7 @@ table.field.listBreakDownElements.import.title	= Importer
 table.field.listBreakDownElements.finish.text 	= Terminer
 table.field.listBreakDownElements.finish.title 	= Terminer
 
-table.title.showTeamActivitiesSummary 					= Liste des activités du processus
+table.title.showTeamActivitiesSummary 					= Liste des activités du projet
 table.field.showTeamActivitiesSummary.name				= Nom
 table.field.showTeamActivitiesSummary.state				= Etat
 table.field.showTeamActivitiesSummary.userLastName 		= Participant
