--- a/Woops/src/ApplicationResources.properties
+++ b/Woops/src/ApplicationResources.properties
@@ -326,3 +326,15 @@ table.field.showTeamActivitiesSummary.endDate			= Date de fin de tâche
 error.file.find	= Impossible de trouver le fichier {0}
 error.file.read = Impossible de lire le fichier {0}
 error.file.parse = Impossible de parser le fichier {0}
+
+
+##### Legende #####################################
+captionInProgressTask 	= Tâche en cours
+captionFreeTask			= Tâche libre
+captionOnGoingTask		= Tâche sans fin
+captionFinishedTask		= Tâche terminée
+captionBlockedTask		= Tâche bloquée par une dépendance
+captionEvenmentTask		= Tâche en attente d'un évènement
+captionInProgressTask.bold = En gras
+
+
