--- a/Woops/.settings/org.eclipse.jdt.ui.prefs
+++ b/Woops/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,3 @@
-#Sun Jan 08 20:19:53 CET 2006
+#Tue Nov 15 23:44:42 CET 2005
 eclipse.preferences.version=1
-internal.default.compliance=default
-org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
+org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?>\r\n<templates/>
